# -University-Management-Service

./: README.md  manage.py  pyproject.toml  requirements.txt  urls.py
account/: admin.py  apps.py  models.py  permissions.py  serializers.py  urls.py  views.py
account/locale/fa/LC_MESSAGES/: django.po
account/management/commands/: create_permission_groups.py
account/migrations/: 0001_initial.py  0002_initial.py
department/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
department/locale/fa/LC_MESSAGES/: django.po
department/migrations/: 0001_initial.py
request/: apps.py  models.py  serializers.py  urls.py  views.py
request/locale/fa/LC_MESSAGES/: django.po
request/migrations/: 0001_initial.py
samane_golestan/: asgi.py  settings.py  urls.py  wsgi.py
utils/: model_helper.py
